[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/Background/background_0.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Game.gd" type="Script" id=2]
[ext_resource path="res://Assets/Background/background_2.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Ground.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/Background/background_1.png" type="Texture" id=6]
[ext_resource path="res://Assets/licitar_b.png" type="Texture" id=7]
[ext_resource path="res://Resources/font.tres" type="Theme" id=8]
[ext_resource path="res://Assets/balkan_bleeps_logo.png" type="Texture" id=9]

[node name="Game" type="Node"]
script = ExtResource( 2 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
offset = Vector2( 0, 120 )
transform = Transform2D( 1, 0, 0, 1, 0, 120 )

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.5, 1 )
motion_mirroring = Vector2( 960, 0 )

[node name="Background2" type="Sprite" parent="ParallaxBackground/ParallaxLayer2"]
texture = ExtResource( 3 )

[node name="ParallaxLayer1" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.75, 1 )
motion_mirroring = Vector2( 1008, 0 )

[node name="Background1" type="Sprite" parent="ParallaxBackground/ParallaxLayer1"]
texture = ExtResource( 6 )

[node name="ParallaxLayer0" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 1512, 0 )

[node name="Background0" type="Sprite" parent="ParallaxBackground/ParallaxLayer0"]
texture = ExtResource( 1 )

[node name="Player" parent="." instance=ExtResource( 4 )]
visible = false
position = Vector2( 0, 120 )

[node name="Ground1" parent="." instance=ExtResource( 5 )]
position = Vector2( -360, 240 )

[node name="Ground2" parent="." instance=ExtResource( 5 )]
position = Vector2( 360, 240 )

[node name="Ground3" parent="." instance=ExtResource( 5 )]
position = Vector2( 1080, 240 )

[node name="LicitarSpawnTimer" type="Timer" parent="."]
autostart = true

[node name="YugoSpawnTimer" type="Timer" parent="."]
wait_time = 4.0
autostart = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchor_right = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = 14.0

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/MarginContainer"]
margin_right = 312.0
margin_bottom = 13.0

[node name="LicitarIcon" type="TextureRect" parent="CanvasLayer/MarginContainer/HBoxContainer"]
margin_right = 15.0
margin_bottom = 13.0
texture = ExtResource( 7 )

[node name="LicitarX" type="Label" parent="CanvasLayer/MarginContainer/HBoxContainer"]
margin_left = 19.0
margin_top = 2.0
margin_right = 27.0
margin_bottom = 10.0
theme = ExtResource( 8 )
text = "x"

[node name="LicitarScore" type="Label" parent="CanvasLayer/MarginContainer/HBoxContainer"]
margin_left = 31.0
margin_top = 2.0
margin_right = 39.0
margin_bottom = 10.0
theme = ExtResource( 8 )
text = "0"

[node name="Splash" type="TextureRect" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -73.0
margin_top = -73.0
margin_right = 73.0
margin_bottom = 73.0
texture = ExtResource( 9 )

[node name="PlayTextContainer" type="MarginContainer" parent="CanvasLayer"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -32.0
margin_bottom = -32.0

[node name="PlayText" type="Label" parent="CanvasLayer/PlayTextContainer"]
margin_right = 320.0
margin_bottom = 8.0
theme = ExtResource( 8 )
text = "PRESS ANY KEY TO PLAY"
align = 1

[connection signal="collect_licitar" from="Player" to="." method="_on_Player_collect_licitar"]
[connection signal="take_damage" from="Player" to="." method="_on_Player_take_damage"]
[connection signal="timeout" from="LicitarSpawnTimer" to="." method="_on_LicitarSpawnTimer_timeout"]
[connection signal="timeout" from="YugoSpawnTimer" to="." method="_on_YugoSpawnTimer_timeout"]
